--- a/ferramentas.html
+++ b/ferramentas.html
@@ -47,7 +47,7 @@
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
             aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation"></button>
         <div class="collapse navbar-collapse" id="collapsibleNavId">
-            <ul class="navbar-nav ml-auto"> <!-- Adicione a classe ml-auto aqui -->
+            <ul class="navbar-nav ml-auto"> 
                 <li class="nav-item active">
                     <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                 </li>
@@ -62,6 +62,7 @@
     </nav>
 
     <h1>Ferramentas Utilizadas para Desenvolver Essa Aplicação</h1>
+    <h3>Click nos links para acessar as documentações</h3>
     <ul class="lista">
         <li class="link"><a class="a_link" href="https://vuejs.org/" target="_blank">Vue.js</a></li>
         <li class="link"><a class="a_link" href="https://getbootstrap.com/" target="_blank">Bootstrap</a></li>
