--- a/contatos.html
+++ b/contatos.html
@@ -24,7 +24,7 @@
                 data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
                 aria-label="Toggle navigation"></button>
             <div class="collapse navbar-collapse" id="collapsibleNavId">
-                <ul class="navbar-nav ml-auto"> <!-- Adicione a classe ml-auto aqui -->
+                <ul class="navbar-nav ml-auto"> 
                     <li class="nav-item active">
                         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
