--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
                 aria-label="Toggle navigation"></button>
             <div class="collapse navbar-collapse" id="collapsibleNavId">
-                <ul class="navbar-nav ml-auto"> <!-- Adicione a classe ml-auto aqui -->
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="contatos.html">Contatos<span class="sr-only">(current)</span></a>
                     </li>
@@ -50,7 +50,7 @@
 
         <h1 class="mb-3 mt-2">CRUD de Contatos</h1>
         <div class="box">
-            <!-- Formulário para adicionar um novo contato -->
+          
             <form @submit.prevent="adicionarContato" class="mb-3">
                 <div class="form-group">
                     <label for="nome">Nome:</label>
@@ -67,7 +67,7 @@
                 <button type="submit" class="btn btn-primary">Adicionar Contato</button>
             </form>
         </div>
-        <!-- Lista de contatos -->
+       
         <table class="table">
             <thead>
                 <tr>
@@ -91,7 +91,7 @@
         </table>
     </div>
 
-    <!-- Link para o Vue.js e script personalizado -->
+
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <script>
         new Vue({
