--- a/ferramentas.html
+++ b/ferramentas.html
@@ -18,6 +18,9 @@
             text-align: center;
             color: #333;
         }
+        h3{
+            text-align: center;
+        }
 
         .lista {
             margin-left: 30px;
