--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD de Contatos</title>
     <!-- Link para o Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <style>
     h1 {
@@ -27,30 +30,31 @@
 
     <div id="app">
 
-        <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <a class="navbar-brand" href="index.html">Agenda</a>
-            <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse"
-                data-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
-                aria-label="Toggle navigation"></button>
-            <div class="collapse navbar-collapse" id="collapsibleNavId">
-                <ul class="navbar-nav ml-auto">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="contatos.html">Contatos<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="contatos.html">Contatos</a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="ferramentas.html">Ferramentas ultilizadas<span
-                                class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="ferramentas.html">Ferramentas ultilizadas</a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="sobre.html">Sobre<span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="sobre.html">Sobre</a>
                     </li>
                 </ul>
             </div>
         </nav>
 
+
         <h1 class="mb-3 mt-2">CRUD de Contatos</h1>
         <div class="box">
-          
+
             <form @submit.prevent="adicionarContato" class="mb-3">
                 <div class="form-group">
                     <label for="nome">Nome:</label>
@@ -67,7 +71,7 @@
                 <button type="submit" class="btn btn-primary">Adicionar Contato</button>
             </form>
         </div>
-       
+
         <table class="table">
             <thead>
                 <tr>
