--- a/sobre.html
+++ b/sobre.html
@@ -7,20 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Sobre</title>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="index.html">Agenda</a>
-        <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
-            aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation"></button>
-        <div class="collapse navbar-collapse" id="collapsibleNavId">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="contatos.html">Contatos<span class="sr-only">(current)</span></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="contatos.html">Contatos</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="ferramentas.html">Ferramentas ultilizadas<span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="ferramentas.html">Ferramentas ultilizadas</a>
                 </li>
             </ul>
         </div>
@@ -32,7 +34,8 @@
     }
 </style>
 <h1>Sobre</h1>
-<p>A aplicação e uma agenda simples com vue-js e bootstrap feita para a matéria Projeto de Gerência de Configuração de Software Mobile</p>
+<p>A aplicação e uma agenda simples com vue-js e bootstrap feita para a matéria Projeto de Gerência de Configuração de
+    Software Mobile</p>
 
 <body>
 
