integrantes do grupo na pagina sobre

--- a/sobre.html
+++ b/sobre.html
@@ -10,6 +10,24 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <title>Sobre</title>
+
+<body>
+    <style>
+        body {
+            text-align: center;
+        }
+        ul{
+            list-style: none;   
+        }
+        li{
+            color: black;
+        }
+        li:hover{
+            color: brown;
+            font-weight: bold;
+        }
+    </style>
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <a class="navbar-brand" href="index.html">Agenda</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -18,10 +36,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
                 <li class="nav-item active">
+                    <a class="nav-link " href="index.html">Home</a>
+                </li>
+                <li class="nav-item ">
                     <a class="nav-link" href="contatos.html">Contatos</a>
                 </li>
                 <li class="nav-item">
@@ -30,18 +48,20 @@
             </ul>
         </div>
     </nav>
-</head>
-<style>
-    body {
-        text-align: center;
-    }
-</style>
-<h1>Sobre</h1>
-<p>A aplicação e uma agenda simples com vue-js e bootstrap feita para a matéria Projeto de Gerência de Configuração de
-    Software Mobile</p>
-
-<body>
-
+    </head>
+    <h1>Sobre</h1>
+    <p>A aplicação e uma agenda simples com vue-js e bootstrap feita para a matéria Projeto de Gerência de Configuração
+        de
+        Software Mobile</p>
+        <div>
+            <h4>Integrantes do grupo</h4>
+            <ul>
+                <a href="https://github.com/juancso"><li>Juan Carlos</li></a>
+                <a href="https://github.com/kaiquerfs"><li>Kaique Oliveira</li></a>
+                <a href="https://github.com/laraaraujoo"><li>Lara Araujo</li></a>
+                <a href="https://github.com/lenilsonrr"><li>Lenilson Rosa</li></a>
+            </ul>
+        </div>
 </body>
 
 </html>
