--- a/sobre.html
+++ b/sobre.html
@@ -56,10 +56,12 @@
         <div>
             <h4>Integrantes do grupo</h4>
             <ul>
+                <a href="#"><li>Alyson Vargas</li></a>
                 <a href="https://github.com/juancso"><li>Juan Carlos</li></a>
                 <a href="https://github.com/kaiquerfs"><li>Kaique Oliveira</li></a>
                 <a href="https://github.com/laraaraujoo"><li>Lara Araujo</li></a>
                 <a href="https://github.com/lenilsonrr"><li>Lenilson Rosa</li></a>
+                <a href="#"><li>Patrick Gomes</li></a>
             </ul>
         </div>
 </body>
